--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </nav>
       <hr />
       <h1>About Dogs</h1>
-      <img src="images/dog 1.avif" alt="dog image" height="250px" />
+      <img src="dog 1.avif" alt="dog image" height="250px" />
       <br />
       <a href="https://www.google.com/">Google</a>
       <a href="https://www.youtube.com/">Youtube</a>
@@ -37,7 +37,7 @@
         new breeds as need or desire arose.
       </p>
       <h1>Origin of breeds</h1>
-      <img src="images/dog 2.avif" alt="Dog image" height="250px" />
+      <img src="dog 2.avif" alt="Dog image" height="250px" />
       <p>
         Once it became evident that dogs were faster and stronger and could see
         and hear better than humans, those specimens exhibiting these qualities
