--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="try.css" />
 
-    <title>Museum of Candy</title>
+    <title>SPEED</title>
   </head>
 
   <body>
