--- a/index.html
+++ b/index.html
@@ -150,14 +150,15 @@
               <h2>Rolls-Royce</h2>
               <img src="rolzs.png" alt="" class="d-none d-lg-inline" />
               <p class="lead">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque,
-                iRolls-Royce is a legendary British luxury automobile
+                Rolls-Royce is a legendary British luxury automobile
                 manufacturer with a storied history dating back to 1904. Founded
                 by Charles Rolls and Henry Royce, the company has become
                 synonymous with opulence, craftsmanship, and the epitome of
-                automotive excellence. Each car is handcrafted with precision
-                and care, resulting in a level of luxury that is unparalleled in
-                the automotive world.
+                automotive excellence. Rolls-Royce vehicles are renowned for
+                their meticulous attention to detail, exquisite design, and the
+                use of the finest materials. Each car is handcrafted with
+                precision and care, resulting in a level of luxury that is
+                unparalleled in the automotive world.
               </p>
             </div>
           </div>
