--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
               <h2>AUDI</h2>
               <img src="audis.png" alt="" class="d-none d-lg-inline" />
               <p class="lead">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque,
-                iAudi is a renowned German automobile manufacturer known for
+                Audi is a renowned German automobile manufacturer known for
                 producing luxurious and high-performance vehicles. Founded in
                 1909 by August Horch, the company's name "Audi" is derived from
                 the Latin translation of Horch's last name, which means "listen"
