--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
       <div class="collapse navbar-collapse" id="navLinks">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a href="" class="nav-link">HOME</a>
+            <a href="#home" class="nav-link">HOME</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link">ABOUT</a>
+            <a href="#form" class="nav-link">ABOUT</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link">CONTACT</a>
+            <a href="#contact" class="nav-link">CONTACT</a>
           </li>
         </ul>
       </div>
@@ -64,11 +64,13 @@
             id="headingGroup"
             class="text-white text-center d-none d-lg-block mt-5"
           >
-            <h1 class="">Life's too short to drive boring cars !</h1>
+            <h1 class="">
+              Life's too short to drive boring cars <span>!</span>
+            </h1>
           </div>
         </div>
         <div class="col-lg-6">
-          <img class="img-fluid" src="cars0.png" alt="" />
+          <img class="img-fluid" src="cars0.png" alt="" id="home" />
         </div>
       </div>
     </section>
@@ -193,7 +195,7 @@
 
     <section>
       <div class="container">
-        <h3 class="form">
+        <h3 class="form" id="form">
           Car Enthusiast Survey: Share Your Dream Car Preferences !
         </h3>
         <form action="#nowhere" class="form1">
@@ -288,10 +290,53 @@
             </div>
           </div>
 
-          <button type="submit" class="btn btn-primary">Register</button>
+          <button type="submit" class="btn btn-primary form-group">
+            Register
+          </button>
         </form>
       </div>
     </section>
+    <hr class="underline" />
+
+    <div class="container">
+      <h4 class="contact" id="contact">CONTACT</h4>
+      <div class="row">
+        <div class="col-md-6 foot">
+          <h5>
+            <img src="mail.png" alt="" class="logos" />
+            <a href="mailto:contact@example.com">Email</a>
+          </h5>
+          <h5>
+            <img src="phone.png" alt="" class="logos" />
+            <a href="mailto:contact@example.com">96649XXXX</a>
+          </h5>
+          <h5>
+            <img src="github.png" alt="" class="logos" />
+            <a href="https://github.com/ShivarajGuduri">Github</a>
+          </h5>
+        </div>
+        <div class="col-md-6 foot">
+          <h5>
+            <img src="instagram.png" alt="" class="logos" />
+            <a
+              href="https://instagram.com/shivaraj.guduri?igshid=MjEwN2IyYWYwYw=="
+              >Instagram</a
+            >
+          </h5>
+          <h5>
+            <img src="linkedin.png" alt="" class="logos" />
+            <a href="https://www.linkedin.com/in/shivaraj-guduri-964a9414a/"
+              >linkedin</a
+            >
+          </h5>
+          <h5>
+            <img src="twitter.png" alt="" class="logos" />
+            <a href="https://github.com/ShivarajGuduri">Twitter</a>
+          </h5>
+        </div>
+      </div>
+      <div class="empty"></div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
